--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "windingtree-media",
-  "version": "1.0.0",
+  "name": "@windingtree/media",
+  "version": "1.0.0-rc.1",
   "description": "Winding Tree design elements publicly available for anyone who wants to use our brand in the right way.",
-  "main": "index.js",
+  "main": "dist/logo.png",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "sh ./scripts/copy-to-dist.sh"
   },
   "repository": {
     "type": "git",
